--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   }
